--- a/package.json
+++ b/package.json
@@ -35,20 +35,23 @@
     "lucide-react": "^0.536.0",
     "next": "15.4.1",
     "next-themes": "^0.4.6",
+    "nodemailer": "^7.0.6",
     "pg": "^8.16.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
     "react-number-format": "^5.4.4",
+    "react-pay-icons": "^4.0.0",
     "sonner": "^2.0.7",
-    "stripe": "^18.4.0",
+    "stripe": "^18.5.0",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.0.14"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
+    "@types/node": "^20.19.13",
+    "@types/nodemailer": "^7.0.1",
     "@types/pg": "^8.15.4",
     "@types/react": "^19",
     "@types/react-dom": "^19",
@@ -59,8 +62,9 @@
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
     "tailwindcss": "^4",
+    "ts-node": "^10.9.2",
     "tsx": "^4.20.3",
     "tw-animate-css": "^1.3.6",
-    "typescript": "^5"
+    "typescript": "^5.9.2"
   }
 }
